--- a/deps/Makefile
+++ b/deps/Makefile
@@ -109,9 +109,9 @@ jemalloc: .make-prerequisites
 rocksdb: .make-prerequisites
 	@printf '%b %b\n' $(MAKECOLOR)MAKE$(ENDCOLOR) $(BINCOLOR)$@$(ENDCOLOR)
 ifeq ($(uname_M),x86_64)
-	cd rocksdb && CFLAGS=-Wno-error PORTABLE=1 USE_SSE=1 FORCE_SSE42=1 $(MAKE) static_lib
+	cd rocksdb && PORTABLE=1 USE_SSE=1 FORCE_SSE42=1 DEBUG_LEVEL=0 $(MAKE) static_lib
 else
-	cd rocksdb && PORTABLE=1 $(MAKE) static_lib
+	cd rocksdb && PORTABLE=1 DEBUG_LEVEL=0 $(MAKE) static_lib
 endif
 
 .PHONY: rocksdb
