Fix Debian packaging: systemd paths, postinst scripts, and version
Resolves installation and upgrade issues by:
- Moving systemd service files to /usr/lib/systemd/system/
- Adding user and file existence checks in postinst scripts
- Fixing Setup_dir parameter order and error handling
- Simplifying service file generation in rules
- Updating version from placeholder to 6.3.5

🤖 Generated with Codebuff
Co-Authored-By: Codebuff <noreply@codebuff.com>

--- a/pkg/deb/debian/rules
+++ b/pkg/deb/debian/rules
@@ -19,7 +19,8 @@ endif
 	dh $@
 
 override_dh_auto_install:
-	debian/bin/generate-systemd-service-files
+	cp pkg/deb/debian/keydb-server.service debian/keydb-server.service
+	cp pkg/deb/debian/keydb-sentinel.service debian/keydb-sentinel.service
 	dh_installsystemd --restart-after-upgrade
 
 override_dh_auto_test:
